# MyObservatory-Testing-Project

./: .env.example  .gitignore  README.md  conftest.py  package-lock.json  package.json  pyproject.toml  pytest.ini
api/: __init__.py  weather_api_client.py
config/: __init__.py  config.yaml  config_manager.py
drivers/: __init__.py  driver_factory.py
pages/: __init__.py  agreement_page.py  base_page.py  home_page.py  navigation_drawer_page.py  nine_day_forecast_page.py  slide_page.py
tests/: test_api_demo.py
tests/features/: api_humidity.feature  mobile_navigation.feature
tests/step_defs/: __init__.py  test_api_humidity_steps.py  test_mobile_navigation_steps.py
utils/: __init__.py  date_utils.py  logger.py  screenshot_helper.py  wait_helper.py
